# This CMakeLists.txt file can be used to generate makefiles for several projects at once.
# It should be put in the directory containing the projects.

enable_testing()

# See http://www.cmake.org/Wiki/CMake_Useful_Variables for more variables to set
cmake_minimum_required(VERSION 2.8.10)

# Include the pv_add_test macro
include(PVAddTest)
include(PVAddExecutable)

set(PV_SYSTEM_TEST_THREADS "" CACHE STRING "Defines the number of threads to use for system tests (empty string for max)")

# Make sure that PV_SYSTEM_TEST_THREADS is a number
if("${PV_SYSTEM_TEST_THREADS}" MATCHES "^([0-9]+|)$")
   #Do nothing, correct
else("${PV_SYSTEM_TEST_THREADS}" MATCHES "^([0-9]+|)$")
   message(FATAL_ERROR "PV_SYSTEM_TEST_THREADS must be either a positive integer or the empty string")
endif("${PV_SYSTEM_TEST_THREADS}" MATCHES "^([0-9]+|)$")

add_subdirectory(BasicSystemTest)
add_subdirectory(AdjustAxonalArborsTest)
add_subdirectory(ArborSystemTest)
add_subdirectory(BackgroundLayerTest)
add_subdirectory(BatchCheckpointSystemTest)
add_subdirectory(BatchMPICheckpointSystemTest)
add_subdirectory(BatchSweepTest)
add_subdirectory(BatchWeightUpdateTest)
add_subdirectory(BatchWeightUpdateMpiTest)
add_subdirectory(BinningLayerTest)
add_subdirectory(CheckpointSystemTest)
add_subdirectory(CloneHyPerConnTest)
add_subdirectory(CloneKernelConnTest)
add_subdirectory(CloneVLayerTest)
add_subdirectory(ConnectionRestartTest)
add_subdirectory(ConvertRateToSpikeCountTest)
add_subdirectory(ConvertToGrayscaleTest)
add_subdirectory(CopyConnTest)
add_subdirectory(DatastoreDelayTest)
add_subdirectory(DelaysToFeaturesTest)
add_subdirectory(DryRunFlagTest)
add_subdirectory(DtAdaptControllerTest)
add_subdirectory(GenericSystemTest)

if (PV_USE_CUDA OR PV_USE_OPENCL)
   add_subdirectory(GPUSystemTest)
endif (PV_USE_CUDA OR PV_USE_OPENCL)

add_subdirectory(GroupNormalizationTest)
add_subdirectory(ImageSystemTest)
add_subdirectory(ImageOffsetTest)
add_subdirectory(ImportParamsTest)
add_subdirectory(ImprintConnTest)
add_subdirectory(InitWeightsTest)
add_subdirectory(KernelTest)
add_subdirectory(KernelActivationTest)
add_subdirectory(LayerPhaseTest)
add_subdirectory(LayerRestartTest)
add_subdirectory(LCATest)
add_subdirectory(LIFTest)
add_subdirectory(MarginWidthTest)
add_subdirectory(MaskLayerTest)
add_subdirectory(MaxPoolTest)
add_subdirectory(MovieSystemTest)
add_subdirectory(MomentumTest)
add_subdirectory(MomentumLCATest)
#add_subdirectory(MLPTest) # Moved to auxlib/mlearning
add_subdirectory(MPITest)
add_subdirectory(NormalizeSubclassSystemTest)
add_subdirectory(NormalizeSystemTest)
add_subdirectory(ParameterSweepTest)
add_subdirectory(PlasticConnTest)
add_subdirectory(PlasticTransposeConnTest)
add_subdirectory(PointProbeTest)
add_subdirectory(ProcessParamsTest)
add_subdirectory(PtwiseLinearTransferLayerTest)
add_subdirectory(RandStateSystemTest)
add_subdirectory(ReadArborFileTest)
add_subdirectory(ReceiveFromPostTest)
add_subdirectory(RescaleLayerTest)
add_subdirectory(ResetStateOnTriggerTest)
add_subdirectory(SegmentTest)
add_subdirectory(ShrunkenPatchTest)
add_subdirectory(ShrunkenPatchFlagTest)
add_subdirectory(StochasticReleaseTest)

#TODO reimplement sumpooltest
#add_subdirectory(SumPoolTest)

add_subdirectory(test_border_activity)
add_subdirectory(test_cocirc)
add_subdirectory(test_constant_input)
add_subdirectory(test_datatypes)
add_subdirectory(test_delta)
add_subdirectory(test_delta_pos)
add_subdirectory(test_extend_border)
add_subdirectory(test_gauss2d)
add_subdirectory(test_kg)
add_subdirectory(test_kxpos)
add_subdirectory(test_kypos)
add_subdirectory(test_mirror_BCs)
add_subdirectory(test_mpi_specifyrowscolumns)
add_subdirectory(test_nearby_neighbor)
add_subdirectory(test_patch_head)
add_subdirectory(test_post_weights)
add_subdirectory(test_read_header)
add_subdirectory(test_sign)
add_subdirectory(TotalEnergyTest)
add_subdirectory(TransposeConnTest)
add_subdirectory(TransposeHyPerConnTest)
add_subdirectory(TriggerTest)
add_subdirectory(UnequalPatchSizeTest)
add_subdirectory(UpdateFromCloneTest)
#add_subdirectory(WindowSystemTest)
add_subdirectory(WriteActivitySparseTest)
add_subdirectory(WriteSparseFileTest)
# # Insert additional add_subdirectory commands to add other projects.
